# control_finanzas_tiendas

./: .gitignore  main.py  pyproject.toml
base_app/: models.py
compra/: admin.py  api.py  models.py  schemas.py
compra/migrations/: 0001_initial.py  0002_rename_created_at_compra_fecha_creacion_and_more.py
core/: api.py  settings.py  urls.py
dashboard/: api.py  schemas.py
producto/: admin.py  api.py  models.py  schemas.py
producto/migrations/: 0001_initial.py  0002_alter_producto_detalles_alter_producto_precio.py  0003_rename_created_at_producto_fecha_creacion_and_more.py
producto/templates/admin/producto/producto/: change_list.html
tienda/: admin.py  api.py  models.py  schemas.py
tienda/migrations/: 0001_initial.py  0002_tienda_descripcion_tienda_telefono_and_more.py  0003_rename_created_at_tienda_fecha_creacion_and_more.py
venta/: admin.py  api.py  models.py  schemas.py
venta/migrations/: 0001_initial.py  0002_rename_created_at_venta_fecha_creacion_and_more.py
